--- a/about.html
+++ b/about.html
@@ -19,7 +19,7 @@
 <body>
 <!-- header -->
 <nav>
-  <div class="nav-wrapper">
+  <div class="light-blue accent-3 nav-wrapper">
     <a href="home.html" class="brand-logo">Logo</a>
     <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons">menu</i></a>
     <ul class="right hide-on-med-and-down">
@@ -36,9 +36,7 @@
         <li><a href="providers.html">Providers</a></li>
         <li><a href="contact.html">Contact</a></li>
       </ul>
-
-
-    <h1>about</h1>
+<h1>about</h1>
 
 <!-- footer -->
     <footer class="page-footer">
