--- a/home.html
+++ b/home.html
@@ -19,8 +19,8 @@
 <body>
 <!-- header -->
 <nav>
-  <div class="nav-wrapper">
-    <a href="home.html" class="brand-logo">Logo</a>
+  <div class="light-blue accent-3 nav-wrapper">
+    <a href="home.html" class="brand-logo">Szuster Psychiatry</a>
     <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons">menu</i></a>
     <ul class="right hide-on-med-and-down">
       <li><a href="about.html">About</a></li>
@@ -36,9 +36,50 @@
         <li><a href="providers.html">Providers</a></li>
         <li><a href="contact.html">Contact</a></li>
       </ul>
-    <h1>hello</h1>
+
+<div class="title-home">
+   <h1>Szuster Psychiatry</h1>
+</div>
+<!-- slider -->
+
+<div class="slider">
+  <ul class="slides">
+    <li>
+      <img src="https://images.unsplash.com/photo-1488998527040-85054a85150e?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8MTN8fGRvY3RvcnxlbnwwfHwwfHw%3D&auto=format&fit=crop&w=400&q=60"
+      alt="code" 
+      style="width:100%;height:100%"
+      target="_blank"
+     > <!-- random image -->
+      <div class="caption center-align">
+        <h3>Glad You are Here!</h3>
+        <h5 class="light grey-text text-lighten-3">We look forward to caring for you!</h5>
+      </div>
+    </li>
+    <li>
+      <img src="https://images.unsplash.com/photo-1507537362848-9c7e70b7b5c1?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8MjR8fGFwcG9pbnRtZW50fGVufDB8fDB8fA%3D%3D&auto=format&fit=crop&w=400&q=60"> <!-- random image -->
+      <div class="caption left-align">
+        <h3>Dr Szuster is an expert in combining psychotherapy and medication</h3>
+        <h5 class="light grey-text text-lighten-3"> to treat mental health issues</h5>
+      </div>
+    </li>
+    <li>
+      <img src="https://images.unsplash.com/photo-1541692641319-981cc79ee10a?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8Nnx8Y2hpbGRyZW4lMjB0aGVyYXB5fGVufDB8fDB8fA%3D%3D&auto=format&fit=crop&w=400&q=60"> <!-- random image -->
+      <div class="caption right-align">
+        <h3>An expert in child & adolescent psychiatry as well as geriatric populations </h3>
+        <h5 class="light grey-text text-lighten-3">Our therapists have training in CBT, DBT, Family Systems and Psychoanalysis</h5>
+      </div>
+    </li>
+    <li>
+      <img src="https://images.unsplash.com/photo-1604881991405-b273c7a4386a?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8MzF8fGNoaWxkcmVuJTIwdGhlcmFweXxlbnwwfHwwfHw%3D&auto=format&fit=crop&w=400&q=60"> <!-- random image -->
+      <div class="caption center-align">
+        <h3>Hablamos Español!</h3>
+        <h5 class="light blue-text text-lighten-3">& Portuguese!</h5>
+      </div>
+    </li>
+  </ul>
+</div>
 <!-- footer -->
-    <footer class="page-footer">
+    <footer class="light-blue accent-3 page-footer">
       <div class="container">
         <div class="row">
           <div class="col l6 s12">
