--- a/services.html
+++ b/services.html
@@ -19,7 +19,7 @@
 <body>
 <!-- header -->
 <nav>
-  <div class="nav-wrapper">
+  <div class="light-blue accent-3 nav-wrapper">
     <a href="home.html" class="brand-logo">Logo</a>
     <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons">menu</i></a>
     <ul class="right hide-on-med-and-down">
