--- a/about.html
+++ b/about.html
@@ -39,7 +39,7 @@
 <h1>about</h1>
 
 <!-- footer -->
-    <footer class="page-footer">
+<footer class="light-blue accent-3 page-footer">
       <div class="container">
         <div class="row">
           <div class="col l6 s12">
