--- a/services.html
+++ b/services.html
@@ -38,7 +38,7 @@
       </ul>
     <h1>services</h1>
 <!-- footer -->
-    <footer class="page-footer">
+<footer class="light-blue accent-3 page-footer">
       <div class="container">
         <div class="row">
           <div class="col l6 s12">
