--- a/home.html
+++ b/home.html
@@ -36,48 +36,61 @@
         <li><a href="providers.html">Providers</a></li>
         <li><a href="contact.html">Contact</a></li>
       </ul>
-
-<div class="title-home">
-   <h1>Szuster Psychiatry</h1>
-</div>
 <!-- slider -->
-
+<h1>Szuster Psychiatry</h1>
 <div class="slider">
   <ul class="slides">
     <li>
       <img src="https://images.unsplash.com/photo-1488998527040-85054a85150e?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8MTN8fGRvY3RvcnxlbnwwfHwwfHw%3D&auto=format&fit=crop&w=400&q=60"
       alt="code" 
-      style="width:100%;height:100%"
+      width="450"
       target="_blank"
      > <!-- random image -->
       <div class="caption center-align">
-        <h3>Glad You are Here!</h3>
-        <h5 class="light grey-text text-lighten-3">We look forward to caring for you!</h5>
+        <h3 class="blue-text text-darken-4">Glad You are Here!</h3>
+        <h5 class="panel light-blue text-accent-3">We look forward to caring for you!</h5>
       </div>
     </li>
     <li>
-      <img src="https://images.unsplash.com/photo-1507537362848-9c7e70b7b5c1?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8MjR8fGFwcG9pbnRtZW50fGVufDB8fDB8fA%3D%3D&auto=format&fit=crop&w=400&q=60"> <!-- random image -->
+      <img src="https://images.unsplash.com/photo-1507537362848-9c7e70b7b5c1?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8MjR8fGFwcG9pbnRtZW50fGVufDB8fDB8fA%3D%3D&auto=format&fit=crop&w=400&q=60"
+      alt="code" 
+      width="450"
+      target="_blank"> <!-- random image -->
       <div class="caption left-align">
-        <h3>Dr Szuster is an expert in combining psychotherapy and medication</h3>
-        <h5 class="light grey-text text-lighten-3"> to treat mental health issues</h5>
+        <h3 class="blue-text text-darken-4">Experts in combining psychotherapy and medication</h3>
+        <h5 class="panel light-blue text-accent-3">to treat mental health issues</h5>
       </div>
     </li>
     <li>
-      <img src="https://images.unsplash.com/photo-1541692641319-981cc79ee10a?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8Nnx8Y2hpbGRyZW4lMjB0aGVyYXB5fGVufDB8fDB8fA%3D%3D&auto=format&fit=crop&w=400&q=60"> <!-- random image -->
-      <div class="caption right-align">
-        <h3>An expert in child & adolescent psychiatry as well as geriatric populations </h3>
-        <h5 class="light grey-text text-lighten-3">Our therapists have training in CBT, DBT, Family Systems and Psychoanalysis</h5>
+      <img src="https://images.squarespace-cdn.com/content/v1/56c8e31f07eaa0772e129736/1458144098273-UQHTZISNSTS44T6K16ID/image-asset.jpeg?format=500w"> <!-- random image -->
+      <div class="caption right-align"
+      alt="code" 
+      width="450"
+      target="_blank">
+      <h3 class="blue-text text-darken-4">Special focus on child & adolescent psychiatry and geriatric populations </h3>
+      <h5 class="panel light-blue text-accent-3">Our therapists have training in CBT, DBT, Family Systems and Psychoanalysis</h5>
       </div>
     </li>
     <li>
-      <img src="https://images.unsplash.com/photo-1604881991405-b273c7a4386a?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8MzF8fGNoaWxkcmVuJTIwdGhlcmFweXxlbnwwfHwwfHw%3D&auto=format&fit=crop&w=400&q=60"> <!-- random image -->
+      <img src="https://images.squarespace-cdn.com/content/v1/56c8e31f07eaa0772e129736/1458144198094-EQMIWSOGE32J5FS9RX6X/image-asset.jpeg?format=500w"
+      alt="code" 
+      width="450"
+      target="_blank"> <!-- random image -->
+  
       <div class="caption center-align">
-        <h3>Hablamos Español!</h3>
-        <h5 class="light blue-text text-lighten-3">& Portuguese!</h5>
+        <h3 class="blue-text text-darken-4">Hablamos Español!</h3>
+        <h5 class="panel light-blue text-accent-3">& Portuguese!</h5>
       </div>
     </li>
   </ul>
 </div>
+<div>
+  <img src="https://d1k13df5m14swc.cloudfront.net/ca1718ae-937d-4c15-b179-ac1337965d65zoom.jpg"
+        alt="code" 
+        width=100%
+        target="_blank"
+       >
+  </div>
 <!-- footer -->
 <footer class="light-blue accent-3 page-footer">
       <div class="container">
