--- a/home.html
+++ b/home.html
@@ -23,7 +23,7 @@
     <a href="home.html" class="brand-logo">Szuster Psychiatry</a>
     <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons">menu</i></a>
     <ul class="right hide-on-med-and-down">
-      <li><a href="about.html">About</a></li>
+      <li><a href="about.html">About Us</a></li>
       <li><a href="services.html">Services</a></li>
       <li><a href="providers.html">Providers</a></li>
       <li><a href="contact.html">Contact</a></li>
