staff page done

--- a/about.html
+++ b/about.html
@@ -36,7 +36,63 @@
         <li><a href="providers.html">Providers</a></li>
         <li><a href="contact.html">Contact</a></li>
       </ul>
-<h1>about</h1>
+<h1>About Us</h1>
+<h2>Meet Our Team</h2>
+<main>
+  <div class="row">
+<div class="card col s6" id="person">
+  <div class="card-image waves-effect waves-block waves-light">
+    <img class="activator" src="https://photos.psychologytoday.com/4643913f-46cd-11ea-a6ad-06142c356176/2/320x400.jpeg"
+    alt="code" 
+    style="width: 50%;height:30;"
+    >
+  </div>
+  <div class="card-content">
+    <span class="card-title activator grey-text text-darken-4">Doctor Szuster<i class="material-icons right">View More</i></span>
+    <p><a href="#">Link</a></p>
+  </div>
+  <div class="card-reveal">
+    <span class="card-title grey-text text-darken-4">Card Title<i class="material-icons right">close</i></span>
+    <p>Here is some more information about this product that is only revealed once clicked on.</p>
+  </div>
+</div>
+<div class="card col s6" id="person">
+  <div class="card-image waves-effect waves-block waves-light">
+    <img class="activator" src="https://doximity-res.cloudinary.com/image/upload/t_public_profile_photo_320x320/a0ba5aq8wahika5hbazt.jpg"
+    alt="code" 
+    style="width: 62.5%;height:90;"
+    >
+  </div>
+  <div class="card-content">
+    <span class="card-title activator grey-text text-darken-4">Dr. Sherley Millet<i class="material-icons right">View More</i></span>
+    <p><a href="#">Link</a></p>
+  </div>
+  <div class="card-reveal">
+    <span class="card-title grey-text text-darken-4">Card Title<i class="material-icons right">close</i></span>
+    <p>Here is some more information about this product that is only revealed once clicked on.</p>
+  </div>
+</div>
+<div class="card col s6" id="person">
+  <div class="card-image waves-effect waves-block waves-light">
+    <img class="activator" src="https://d3wnzga3fpd9a.cloudfront.net/e3ec1d49-c633-4867-b295-4b278077238czoom.jpg"
+    alt="code" 
+    style="width: 94%;height:90;"
+    >
+  </div>
+  <div class="card-content">
+    <span class="card-title activator grey-text text-darken-4">Staff 2<i class="material-icons right">View More</i></span>
+    <p><a href="#">Link</a></p>
+  </div>
+  <div class="card-reveal">
+    <span class="card-title grey-text text-darken-4">Card Title<i class="material-icons right">close</i></span>
+    <p>Here is some more information about this product that is only revealed once clicked on.</p>
+  </div>
+</div>
+
+</div>
+
+
+</main>
 
 <!-- footer -->
 <footer class="light-blue accent-3 page-footer">
