--- a/about.html
+++ b/about.html
@@ -39,6 +39,7 @@
 <h1>About Us</h1>
 <h2>Meet Our Team</h2>
 <main>
+  <!-- staff -->
   <div class="row">
 <div class="card col s6" id="person">
   <div class="card-image waves-effect waves-block waves-light">
@@ -49,11 +50,17 @@
   </div>
   <div class="card-content">
     <span class="card-title activator grey-text text-darken-4">Doctor Szuster<i class="material-icons right">View More</i></span>
-    <p><a href="#">Link</a></p>
+    <p>
+      <a 
+      href="https://www.psychologytoday.com/us/psychiatrists/dr-szuster-psychiatry-jackson-heights-ny/379656"
+      target="_blank"
+      >Link</a></p>
   </div>
   <div class="card-reveal">
-    <span class="card-title grey-text text-darken-4">Card Title<i class="material-icons right">close</i></span>
-    <p>Here is some more information about this product that is only revealed once clicked on.</p>
+    <span class="card-title grey-text text-darken-4">About<i class="material-icons right">close</i></span>
+    <p>About Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum doloremque hic suscipit amet repellendus quia, maiores tenetur, eaque quis iste architecto? Reiciendis, doloremque! Vel itaque assumenda sapiente autem mollitia tempore.</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Non minus nihil accusamus laudantium ab! Facilis placeat ex tempore mollitia cumque sunt, repellendus voluptatem dolores eos exercitationem, pariatur officia adipisci rem.</p>
+    <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum consectetur similique mollitia temporibus vel distinctio eveniet esse voluptatibus, quas, illo necessitatibus voluptates nesciunt aliquam ratione tempora praesentium laudantium? Debitis, ullam.</p>
   </div>
 </div>
 <div class="card col s6" id="person">
@@ -68,7 +75,43 @@
     <p><a href="#">Link</a></p>
   </div>
   <div class="card-reveal">
-    <span class="card-title grey-text text-darken-4">Card Title<i class="material-icons right">close</i></span>
+    <span class="card-title grey-text text-darken-4">About<i class="material-icons right">close</i></span>
+    <p>Here is some more information about this product that is only revealed once clicked on.</p>
+    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Magni, quo perferendis at harum facilis molestias. Expedita necessitatibus ullam numquam consequatur. Illo mollitia saepe culpa aspernatur dolores praesentium dolor officiis delectus.</p>
+    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Molestias rerum, accusamus similique quaerat maiores nostrum blanditiis natus tempore nisi perspiciatis nobis rem culpa aliquam eum ex tempora excepturi temporibus expedita.</p>
+  </div>
+</div>
+<div class="card col s6" id="person">
+  <div class="card-image waves-effect waves-block waves-light">
+    <img class="activator" src="https://images.unsplash.com/photo-1576091160399-112ba8d25d1d?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8MXx8ZG9jdG9yfGVufDB8fDB8fA%3D%3D&auto=format&fit=crop&w=500&q=60"
+    alt="code" 
+    style="width: 94%;height:90;"
+    >
+  </div>
+  <div class="card-content">
+    <span class="card-title activator grey-text text-darken-4">Dr. 3<i class="material-icons right">About</i></span>
+    <p><a href="#">Link</a></p>
+  </div>
+  <div class="card-reveal">
+    <span class="card-title grey-text text-darken-4">About<i class="material-icons right">close</i></span>
+    <p>Here is some more information about this product that is only revealed once clicked on.</p>
+    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Magni, quo perferendis at harum facilis molestias. Expedita necessitatibus ullam numquam consequatur. Illo mollitia saepe culpa aspernatur dolores praesentium dolor officiis delectus.</p>
+    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Molestias rerum, accusamus similique quaerat maiores nostrum blanditiis natus tempore nisi perspiciatis nobis rem culpa aliquam eum ex tempora excepturi temporibus expedita.</p>
+  </div>
+</div>
+<div class="card col s6" id="person">
+  <div class="card-image waves-effect waves-block waves-light">
+    <img class="activator" src="https://images.unsplash.com/photo-1600427652630-f97cc4db10cd?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8MXx8dGhlcmFwaXN0fGVufDB8fDB8fA%3D%3D&auto=format&fit=crop&w=500&q=60"
+    alt="code" 
+    style="width: 94%;height:90;"
+    >
+  </div>
+  <div class="card-content">
+    <span class="card-title activator grey-text text-darken-4">Therapist 1<i class="material-icons right">View More</i></span>
+    <p><a href="#">Link</a></p>
+  </div>
+  <div class="card-reveal">
+    <span class="card-title grey-text text-darken-4">About<i class="material-icons right">close</i></span>
     <p>Here is some more information about this product that is only revealed once clicked on.</p>
   </div>
 </div>
@@ -84,10 +127,27 @@
     <p><a href="#">Link</a></p>
   </div>
   <div class="card-reveal">
-    <span class="card-title grey-text text-darken-4">Card Title<i class="material-icons right">close</i></span>
+    <span class="card-title grey-text text-darken-4">About<i class="material-icons right">close</i></span>
     <p>Here is some more information about this product that is only revealed once clicked on.</p>
   </div>
 </div>
+<div class="card col s6" id="person">
+  <div class="card-image waves-effect waves-block waves-light">
+    <img class="activator" src="https://media.istockphoto.com/photos/happy-mature-woman-talking-on-phone-picture-id1059662522?k=20&m=1059662522&s=612x612&w=0&h=3GyI5s00ZADQFNsr5bXklRL3S2GcRIRSwKZnHMbZbyk="
+    alt="code" 
+    style="width: 94%;height:90;"
+    >
+  </div>
+  <div class="card-content">
+    <span class="card-title activator grey-text text-darken-4">Staff 4<i class="material-icons right">View More</i></span>
+    <p><a href="#">Link</a></p>
+  </div>
+  <div class="card-reveal">
+    <span class="card-title grey-text text-darken-4">About<i class="material-icons right">close</i></span>
+    <p>Here is some more information about this product that is only revealed once clicked on.</p>
+  </div>
+</div>
+
 
 </div>
 
