--- a/about.html
+++ b/about.html
@@ -7,7 +7,7 @@
     <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
     <script defer src="./script.js"></script>
     <link rel="stylesheet" href="./style.css">
-    <title>Szuster Psychiatry</title>
+    <title>About Us- Szuster Psychiatry</title>
  <!-- adds materialize -->
  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
  <!-- adds materialize -->
@@ -20,11 +20,11 @@
 <!-- header -->
 <nav>
   <div class="light-blue accent-3 nav-wrapper">
-    <a href="home.html" class="brand-logo">Logo</a>
+    <a href="home.html" class="brand-logo">Szuster Psychiatry</a>
     <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons">menu</i></a>
     <ul class="right hide-on-med-and-down">
       <li><a href="about.html">About Us</a></li>
-      <li><a href="services.html">Services</a></li>
+      <li><a href="services.html" class="dropdown">Services</a></li>
       <li><a href="providers.html">Providers</a></li>
       <li><a href="contact.html">Contact</a></li>
     </ul>
