--- a/home.html
+++ b/home.html
@@ -26,7 +26,7 @@
       <li><a href="about.html">About Us</a></li>
       <!-- DROPDOWN MENU -->
         <!-- Dropdown Trigger -->
-  <a class='dropdown-trigger btn' href='services.html' data-target='dropdown1'>Services</a>
+  <li class='dropdown-trigger' href='services.html' data-target='dropdown1'>Services</li>
 
   <!-- Dropdown Structure -->
   <ul id='dropdown1' class='dropdown-content'>
