--- a/about.html
+++ b/about.html
@@ -30,13 +30,13 @@
 
   <!-- Dropdown Structure -->
   <ul id='dropdown1' class='dropdown-content'>
-    <li><a href='services.html'>Children & Adolescent</a></li>
-    <li><a href='services.html'>DBT</a></li>
-    <li><a href='services.html'>CBT</a></li>
+    <li><a href='services.html' class="light-blue-text text-darken-2">Children & Adolescent</a></li>
+    <li><a href='services.html' class="light-blue-text text-darken-2">DBT</a></li>
+    <li><a href='services.html' class="light-blue-text text-darken-2">CBT</a></li>
     <li class="divider" tabindex="-1"></li>
-    <li><a href='services.html'>Family Systems</a></li>
-    <li><a href='services.html'>Psychiatry</a></li>
-    <li><a href='services.html'>Psychoanalysis</a></li>
+    <li><a href='services.html' class="light-blue-text text-darken-2">Family Systems</a></li>
+    <li><a href='services.html'class="light-blue-text text-darken-2">Psychiatry</a></li>
+    <li><a href='services.html'class="light-blue-text text-darken-2">Psychoanalysis</a></li>
   </ul>
       <li><a href="providers.html">Providers</a></li>
       <li><a href="contact.html">Contact</a></li>
