--- a/contact.html
+++ b/contact.html
@@ -49,30 +49,13 @@
         <li><a href="providers.html">Providers</a></li>
         <li><a href="contact.html">Contact</a></li>
       </ul>
-    <h1>contact</h1>
-<!-- footer -->
-<footer class="light-blue accent-3 page-footer">
-        <div class="container">
-          <div class="row">
-            <div class="col l6 s12">
-              <h5 class="white-text">Footer Content</h5>
-              <p class="grey-text text-lighten-4">You can use rows and columns here to organize your footer content.</p>
-            </div>
-            <div class="col l4 offset-l2 s12">
-              <h5 class="white-text">Links</h5>
-              <ul>
-                <li><a class="grey-text text-lighten-3" href="#!">Link 1</a></li>
-                <li><a class="grey-text text-lighten-3" href="#!">Link 2</a></li>
-              </ul>
-            </div>
-          </div>
-        </div>
-        <div class="footer-copyright">
-          <div class="container"> Szuster Psychiatry
-          © 2014 Copyright Text
-          <a class="grey-text text-lighten-4 right" href="#!">More Links</a>
-          </div>
-        </div>
-      </footer>
+    <h1>Directions</h1>
+    <!-- map -->
+    <center>
+    <div id="map">
+    <div class="mapouter"><div class="gmap_canvas"><iframe width="600" height="500" id="gmap_canvas" src="https://maps.google.com/maps?q=82-11%2037th%20Ave,%20Flushing,%20NY%2011372&t=&z=11&ie=UTF8&iwloc=&output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe><a href="https://www.embedgooglemap.net/blog/divi-discount-code-elegant-themes-coupon/">divi discount</a><br>
+      <a href="https://www.embedgooglemap.net">embedgooglemap.net</a></div></div>
+  </div>
+</center>
 </body>
 </html>
