--- a/directions.html
+++ b/directions.html
@@ -50,12 +50,15 @@
         <li><a href="contact.html">Contact</a></li>
       </ul>
       <main>
-<h1>Get In Contact</h1>
-<form action="https//formsubmit.co/albavmolinanyc@gmail.com" method="POST">
-  <input type="text" name="" id="">
-  <input type="email" name="" id="">
-  <input type="submit" value="Submit">
-</form>
+    <h1>Directions</h1>
+    <!-- map -->
+    <center>
+    <div id="map">
+    <div class="mapouter"><div class="gmap_canvas"><iframe width="600" height="500" id="gmap_canvas" src="https://maps.google.com/maps?q=82-11%2037th%20Ave,%20Flushing,%20NY%2011372&t=&z=11&ie=UTF8&iwloc=&output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe><a href="https://www.embedgooglemap.net/blog/divi-discount-code-elegant-themes-coupon/">divi discount</a><br>
+      <a href="https://www.embedgooglemap.net">embedgooglemap.net</a></div></div>
+  </div>
+</center>
+
 </main>
 
 </body>
