--- a/thanks.html
+++ b/thanks.html
@@ -59,58 +59,30 @@
         <li><a href="providers.html">Providers</a></li>
         <li><a href="contact.html">Contact</a></li>
       </ul>
-      <main>
-<h1>Get In Contact</h1>
-<hr/>
-<br/>
-<div class="row">
-<form action="https//formsubmit.co/albavmolinanyc@gmail.com" method="POST" class="col s12">
-  <input type="hidden" name="_subject" value="new email woo">
- 
-  <input type="text" name="" id="">
-  <label for="textarea">First Name</label>
-
-  <input type="text" name="" id="">
-  <label for="textarea">Last Name</label>
-
-  <input type="email" name="" id="" required>
-  <label for="textarea">Email</label>
-  <input type="hidden" name="_next" value="https://yourdomain.com/thanks.html">
-
-  <input type="text" name="" id="">
-  <label for="textarea" required>Phone Number</label>
-
-  <input type="text" name="message" placeholder="write your message here">
-  <label for="textarea" required>Message</label>
-  <br/><br/>
-  <input type="submit" value="Submit" class="waves-effect waves-light btn-small">
-</form>
-</div>
-
-</main>
+    <h1>thanks</h1>
 <!-- footer -->
 <footer class="light-blue accent-3 page-footer">
-  <div class="container">
-    <div class="row">
-      <div class="col l6 s12">
-        <h5 class="white-text">Footer Content</h5>
-        <p class="grey-text text-lighten-4">You can use rows and columns here to organize your footer content.</p>
+      <div class="container">
+        <div class="row">
+          <div class="col l6 s12">
+            <h5 class="white-text">Footer Content</h5>
+            <p class="grey-text text-lighten-4">You can use rows and columns here to organize your footer content.</p>
+          </div>
+          <div class="col l4 offset-l2 s12">
+            <h5 class="white-text">Links</h5>
+            <ul>
+              <li><a class="grey-text text-lighten-3" href="#!">Link 1</a></li>
+              <li><a class="grey-text text-lighten-3" href="#!">Link 2</a></li>
+            </ul>
+          </div>
+        </div>
       </div>
-      <div class="col l4 offset-l2 s12">
-        <h5 class="white-text">Links</h5>
-        <ul>
-          <li><a class="grey-text text-lighten-3" href="#!">Link 1</a></li>
-          <li><a class="grey-text text-lighten-3" href="#!">Link 2</a></li>
-        </ul>
+      <div class="footer-copyright">
+        <div class="container"> Szuster Psychiatry
+        © 2014 Copyright Text
+        <a class="grey-text text-lighten-4 right" href="#!">More Links</a>
+        </div>
       </div>
-    </div>
-  </div>
-  <div class="footer-copyright">
-    <div class="container"> Szuster Psychiatry
-    © 2014 Copyright Text
-    <a class="grey-text text-lighten-4 right" href="#!">More Links</a>
-    </div>
-  </div>
-</footer>
+    </footer>   
 </body>
 </html>
