--- a/contact.html
+++ b/contact.html
@@ -75,7 +75,7 @@
 
   <input type="email" name="" id="" required>
   <label for="textarea">Email</label>
-  <input type="hidden" name="_next" value="https://yourdomain.com/thanks.html">
+  <input type="hidden" name="_next" value="http://127.0.0.1:5500/thanks.html">
 
   <input type="text" name="" id="">
   <label for="textarea" required>Phone Number</label>
@@ -83,11 +83,12 @@
   <input type="text" name="message" placeholder="write your message here">
   <label for="textarea" required>Message</label>
   <br/><br/>
-  <input type="submit" value="Submit" class="waves-effect waves-light btn-small">
+  <input type="submit" value="Submit" class="light-blue accent-3  btn-small">
 </form>
 </div>
-
 </main>
+<br/>
+<br/>
 <!-- footer -->
 <footer class="light-blue accent-3 page-footer">
   <div class="container">
