contact form works

--- a/thanks.html
+++ b/thanks.html
@@ -23,7 +23,7 @@
     <a href="home.html" class="brand-logo">Szuster Psychiatry</a>
     <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons">menu</i></a>
     <ul class="right hide-on-med-and-down">
-      <li><a href="about.html">About Us</a></li>
+      <li><a href="about.html">Thank You</a></li>
       <!-- DROPDOWN MENU -->
         <!-- Dropdown Trigger -->
   <li class='dropdown-trigger' href='services.html' data-target='dropdown1'>Services</li>
@@ -59,7 +59,7 @@
         <li><a href="providers.html">Providers</a></li>
         <li><a href="contact.html">Contact</a></li>
       </ul>
-    <h1>thanks</h1>
+    <h1>thanks for your submission someone from our team will reach out to you shortly!</h1>
 <!-- footer -->
 <footer class="light-blue accent-3 page-footer">
       <div class="container">
