contact page done

--- a/contact.html
+++ b/contact.html
@@ -74,6 +74,9 @@
         <div class="col">
           <input type="email" name="email" class="form-control" placeholder="Email Address" required>
         </div>
+        <div class="col">
+          <input type="num" name="phonenumber" class="form-control" placeholder="Phone Number" required>
+        </div>
       </div>
     </div>
     <div class="form-group">
@@ -81,7 +84,7 @@
     </div>
     <div class="form-group">
       <input type="hidden" name="_next" value="http://127.0.0.1:5500/thanks.html">
-      <input type="hidden" name="_subject" value="new email woo">
+      <input type="hidden" name="_subject" value="someone filled out a contact form on your website!">
 
     </div>
     <button type="submit" class="btn btn-lg btn-dark btn-block">Submit Form</button>
