--- a/about.html
+++ b/about.html
@@ -30,13 +30,9 @@
 
   <!-- Dropdown Structure -->
   <ul id='dropdown1' class='dropdown-content'>
-    <li><a href='services.html' class="light-blue-text text-darken-2">Children & Adolescent</a></li>
-    <li><a href='services.html' class="light-blue-text text-darken-2">DBT</a></li>
-    <li><a href='services.html' class="light-blue-text text-darken-2">CBT</a></li>
+    <li><a href='services.html' class="light-blue-text text-darken-2">Psychiatry</a></li>
     <li class="divider" tabindex="-1"></li>
-    <li><a href='services.html' class="light-blue-text text-darken-2">Family Systems</a></li>
-    <li><a href='services.html'class="light-blue-text text-darken-2">Psychiatry</a></li>
-    <li><a href='services.html'class="light-blue-text text-darken-2">Psychoanalysis</a></li>
+    <li><a href='services.html' class="light-blue-text text-darken-2">Therapy</a></li>
   </ul>
       <li><a href="providers.html">Providers</a></li>
           <!-- DROPDOWN MENU -->
@@ -84,6 +80,22 @@
     <p>About Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum doloremque hic suscipit amet repellendus quia, maiores tenetur, eaque quis iste architecto? Reiciendis, doloremque! Vel itaque assumenda sapiente autem mollitia tempore.</p>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Non minus nihil accusamus laudantium ab! Facilis placeat ex tempore mollitia cumque sunt, repellendus voluptatem dolores eos exercitationem, pariatur officia adipisci rem.</p>
     <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum consectetur similique mollitia temporibus vel distinctio eveniet esse voluptatibus, quas, illo necessitatibus voluptates nesciunt aliquam ratione tempora praesentium laudantium? Debitis, ullam.</p>
+  </div>
+</div>
+<div class="card col s6" id="person">
+  <div class="card-image waves-effect waves-block waves-light">
+    <img class="activator" src="https://d3wnzga3fpd9a.cloudfront.net/e3ec1d49-c633-4867-b295-4b278077238czoom.jpg"
+    alt="code" 
+    style="width: 94%;height:90;"
+    >
+  </div>
+  <div class="card-content">
+    <span class="card-title activator grey-text text-darken-4">Stephanie<i class="material-icons right">View More</i></span>
+    <p><a href="#">Link</a></p>
+  </div>
+  <div class="card-reveal">
+    <span class="card-title grey-text text-darken-4">About<i class="material-icons right">close</i></span>
+    <p>Here is some more information about this product that is only revealed once clicked on.</p>
   </div>
 </div>
 
