--- a/contact.html
+++ b/contact.html
@@ -30,13 +30,9 @@
 
   <!-- Dropdown Structure -->
   <ul id='dropdown1' class='dropdown-content'>
-    <li><a href='services.html' class="light-blue-text text-darken-2">Children & Adolescent</a></li>
-    <li><a href='services.html' class="light-blue-text text-darken-2">DBT</a></li>
-    <li><a href='services.html' class="light-blue-text text-darken-2">CBT</a></li>
+    <li><a href='services.html' class="light-blue-text text-darken-2">Psychiatry</a></li>
     <li class="divider" tabindex="-1"></li>
-    <li><a href='services.html' class="light-blue-text text-darken-2">Family Systems</a></li>
-    <li><a href='services.html'class="light-blue-text text-darken-2">Psychiatry</a></li>
-    <li><a href='services.html'class="light-blue-text text-darken-2">Psychoanalysis</a></li>
+    <li><a href='services.html' class="light-blue-text text-darken-2">Therapy</a></li>
   </ul>
       <li><a href="providers.html">Providers</a></li>
           <!-- DROPDOWN MENU -->
@@ -85,6 +81,7 @@
     <div class="form-group">
       <input type="hidden" name="_next" value="http://127.0.0.1:5500/thanks.html">
       <input type="hidden" name="_subject" value="someone filled out a contact form on your website!">
+      <input type="hidden" name="_captcha" value="false">
 
     </div>
     <button type="submit" class="btn btn-lg btn-dark btn-block">Submit Form</button>
