--- a/thanks.html
+++ b/thanks.html
@@ -23,20 +23,16 @@
     <a href="home.html" class="brand-logo">Szuster Psychiatry</a>
     <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons">menu</i></a>
     <ul class="right hide-on-med-and-down">
-      <li><a href="about.html">Thank You</a></li>
+      <li><a href="about.html">About Us</a></li>
       <!-- DROPDOWN MENU -->
         <!-- Dropdown Trigger -->
   <li class='dropdown-trigger' href='services.html' data-target='dropdown1'>Services</li>
 
   <!-- Dropdown Structure -->
   <ul id='dropdown1' class='dropdown-content'>
-    <li><a href='services.html' class="light-blue-text text-darken-2">Children & Adolescent</a></li>
-    <li><a href='services.html' class="light-blue-text text-darken-2">DBT</a></li>
-    <li><a href='services.html' class="light-blue-text text-darken-2">CBT</a></li>
+    <li><a href='services.html' class="light-blue-text text-darken-2">Psychiatry</a></li>
     <li class="divider" tabindex="-1"></li>
-    <li><a href='services.html' class="light-blue-text text-darken-2">Family Systems</a></li>
-    <li><a href='services.html'class="light-blue-text text-darken-2">Psychiatry</a></li>
-    <li><a href='services.html'class="light-blue-text text-darken-2">Psychoanalysis</a></li>
+    <li><a href='services.html' class="light-blue-text text-darken-2">Therapy</a></li>
   </ul>
       <li><a href="providers.html">Providers</a></li>
           <!-- DROPDOWN MENU -->
