--- a/providers.html
+++ b/providers.html
@@ -30,13 +30,9 @@
 
   <!-- Dropdown Structure -->
   <ul id='dropdown1' class='dropdown-content'>
-    <li><a href='services.html' class="light-blue-text text-darken-2">Children & Adolescent</a></li>
-    <li><a href='services.html' class="light-blue-text text-darken-2">DBT</a></li>
-    <li><a href='services.html' class="light-blue-text text-darken-2">CBT</a></li>
+    <li><a href='services.html' class="light-blue-text text-darken-2">Psychiatry</a></li>
     <li class="divider" tabindex="-1"></li>
-    <li><a href='services.html' class="light-blue-text text-darken-2">Family Systems</a></li>
-    <li><a href='services.html'class="light-blue-text text-darken-2">Psychiatry</a></li>
-    <li><a href='services.html'class="light-blue-text text-darken-2">Psychoanalysis</a></li>
+    <li><a href='services.html' class="light-blue-text text-darken-2">Therapy</a></li>
   </ul>
       <li><a href="providers.html">Providers</a></li>
           <!-- DROPDOWN MENU -->
@@ -59,7 +55,6 @@
         <li><a href="providers.html">Providers</a></li>
         <li><a href="contact.html">Contact</a></li>
       </ul>
-
     <h1>providers</h1>
 <!-- footer -->
 <footer class="light-blue accent-3 page-footer">
