--- a/services.html
+++ b/services.html
@@ -30,13 +30,9 @@
 
   <!-- Dropdown Structure -->
   <ul id='dropdown1' class='dropdown-content'>
-    <li><a href='services.html' class="light-blue-text text-darken-2">Children & Adolescent</a></li>
-    <li><a href='services.html' class="light-blue-text text-darken-2">DBT</a></li>
-    <li><a href='services.html' class="light-blue-text text-darken-2">CBT</a></li>
+    <li><a href='services.html' class="light-blue-text text-darken-2">Psychiatry</a></li>
     <li class="divider" tabindex="-1"></li>
-    <li><a href='services.html' class="light-blue-text text-darken-2">Family Systems</a></li>
-    <li><a href='services.html'class="light-blue-text text-darken-2">Psychiatry</a></li>
-    <li><a href='services.html'class="light-blue-text text-darken-2">Psychoanalysis</a></li>
+    <li><a href='services.html' class="light-blue-text text-darken-2">Therapy</a></li>
   </ul>
       <li><a href="providers.html">Providers</a></li>
           <!-- DROPDOWN MENU -->
