services page filled out

--- a/contact.html
+++ b/contact.html
@@ -92,6 +92,10 @@
 </main>
 <br/>
 <br/>
+<hr/>
+<h4>Or call us at: </h4>
+<h4>(718) 396-6766</h4>
+
 <!-- footer -->
 <footer class="light-blue accent-3 page-footer">
   <div class="container">
