ready first deployment

--- a/contact.html
+++ b/contact.html
@@ -101,14 +101,14 @@
   <div class="container">
     <div class="row">
       <div class="col l6 s12">
-        <h5 class="white-text">Footer Content</h5>
-        <p class="grey-text text-lighten-4">You can use rows and columns here to organize your footer content.</p>
+        <h5 class="white-text">Get in Touch with Szuster Psychiatry Today</h5>
+        <p class="grey-text text-lighten-4">(718) 396-6766</p>
       </div>
       <div class="col l4 offset-l2 s12">
         <h5 class="white-text">Links</h5>
         <ul>
-          <li><a class="grey-text text-lighten-3" href="#!">Link 1</a></li>
-          <li><a class="grey-text text-lighten-3" href="#!">Link 2</a></li>
+          <li><a class="grey-text text-lighten-3" href="directions.html">Directions</a></li>
+          <li><a class="grey-text text-lighten-3" href="contact.html">Get in Touch</a></li>
         </ul>
       </div>
     </div>
