--- a/home.html
+++ b/home.html
@@ -42,6 +42,7 @@
         <li class="dropdown2"><a href='contact.html' class="light-blue-text text-darken-2">Contact Information</a></li>
         <li class="divider" tabindex="-1"></li>
         <li class="dropdown2"><a href='directions.html' class="light-blue-text text-darken-2">Directions</a></li>
+        <li class="dropdown2"><a href='index.html' class="light-blue-text text-darken-2">Chat</a></li>
        
        
       </ul>
@@ -110,6 +111,7 @@
         target="_blank"
        >
   </div>
+
 <!-- footer -->
 <footer class="light-blue accent-3 page-footer">
       <div class="container">
