--- a/contact.html
+++ b/contact.html
@@ -79,7 +79,7 @@
       <textarea placeholder="Your Message" class="form-control" name="message" rows="10" required></textarea>
     </div>
     <div class="form-group">
-      <input type="hidden" name="_next" value="http://127.0.0.1:5500/thanks.html">
+      <input type="hidden" name="_next" value="http://www.szusterpsychiatry.com/thanks.html">
       <input type="hidden" name="_subject" value="someone filled out a contact form on your website!">
       <input type="hidden" name="_captcha" value="false">
 
