--- a/contact.html
+++ b/contact.html
@@ -61,7 +61,7 @@
 <br/>
 <div class="container">
   <h1>Get In Contact Form</h1>
-  <form target="_blank" action="https://formsubmit.co/albavmolinanyc@gmail.com" method="POST">
+  <form target="_blank" action="https://formsubmit.co/records@drdavidszuster.com" method="POST">
     <div class="form-group">
       <div class="form-row">
         <div class="col">
