side nav initializition

--- a/about.html
+++ b/about.html
@@ -108,7 +108,7 @@
     >
   </div>
   <div class="card-content">
-    <span class="card-title activator grey-text text-darken-4">Staff 2<i class="material-icons right">View More</i></span>
+    <span class="card-title activator grey-text text-darken-4">Sofia<i class="material-icons right">View More</i></span>
     <p><a href="#">Link</a></p>
   </div>
   <div class="card-reveal">
