--- a/home.html
+++ b/home.html
@@ -25,9 +25,9 @@
     <ul class="right hide-on-med-and-down">
       <li><a href="about.html">About Us</a></li>
       <li><a href="providers.html">Providers</a></li>
-      <li><a href='services.html' class="light-blue-text text-darken-2">Services</a></li>
-      <li class="dropdown2"><a href='contact.html' class="light-blue-text text-darken-2">Get In Touch</a></li>
-      <li class="dropdown2"><a href='directions.html' class="light-blue-text text-darken-2">Directions</a></li>
+      <li><a href="services.html">Services</a></li>
+      <li class="dropdown2"><a href='contact.html'>Get In Touch</a></li>
+      <li class="dropdown2"><a href='directions.html'>Directions</a></li>
     </ul>
   </div>
 </nav>
