--- a/directions.html
+++ b/directions.html
@@ -72,8 +72,10 @@
     </div>
   </div>
   <div class="footer-copyright">
-    <div class="container"> Szuster Psychiatry
-    © 2014 Copyright Text
+    <div class="container"> All Rights Reserved,  &copy; Szuster Psychiatry
+      © 2021
+      <a class="grey-text text-lighten-4 right" href="#!">More Links</a>
+      </div>
     <a class="grey-text text-lighten-4 right" href="#!">More Links</a>
     </div>
   </div>
