white call text

--- a/home.html
+++ b/home.html
@@ -99,7 +99,7 @@
     <div class="row">
       <div class="col l6 s12">
         <h5 class="white-text">Get in Touch with Szuster Psychiatry Today</h5>
-        <p class="grey-text text-lighten-4">(718) 396-6766</p>
+        <p class="white-text text-lighten-4">(718) 396-6766</p>
       </div>
       <div class="col l4 offset-l2 s12">
         <h5 class="white-text">Links</h5>
