--- a/about.html
+++ b/about.html
@@ -33,9 +33,11 @@
 </nav>
       <ul class="sidenav" id="mobile-demo">
         <li><a href="about.html">About</a></li>
-        <li><a href="services.html">Services</a></li>
         <li><a href="providers.html">Providers</a></li>
-        <li><a href="contact.html">Contact</a></li>
+        <li><a href="services.html">Services</a></li>
+        <li><a href="contact.html">Get in Touch</a></li>
+        <li><a href="directions.html">Directions</a></li>
+
       </ul>
 <h1>About Us</h1>
 <h2>Meet Our Team</h2>
