--- a/directions.html
+++ b/directions.html
@@ -31,12 +31,13 @@
     </ul>
   </div>
 </nav>
-      <ul class="sidenav" id="mobile-demo">
-        <li><a href="about.html">About</a></li>
-        <li><a href="services.html">Services</a></li>
-        <li><a href="providers.html">Providers</a></li>
-        <li><a href="contact.html">Contact</a></li>
-      </ul>
+<ul class="sidenav" id="mobile-demo">
+  <li><a href="about.html">About</a></li>
+  <li><a href="providers.html">Providers</a></li>
+  <li><a href="services.html">Services</a></li>
+  <li><a href="contact.html">Get in Touch</a></li>
+  <li><a href="directions.html">Directions</a></li>
+</ul>
       <main>
     <h1>Directions</h1>
     <h5>We have been serving the Jackson Heights and greater New York City area since 2003</h5>
