--- a/thanks.html
+++ b/thanks.html
@@ -31,12 +31,13 @@
     </ul>
   </div>
 </nav>
-      <ul class="sidenav" id="mobile-demo">
-        <li><a href="about.html">About</a></li>
-        <li><a href="services.html">Services</a></li>
-        <li><a href="providers.html">Providers</a></li>
-        <li><a href="contact.html">Contact</a></li>
-      </ul>
+<ul class="sidenav" id="mobile-demo">
+  <li><a href="about.html">About</a></li>
+  <li><a href="providers.html">Providers</a></li>
+  <li><a href="services.html">Services</a></li>
+  <li><a href="contact.html">Get in Touch</a></li>
+  <li><a href="directions.html">Directions</a></li>
+</ul>
     <h1>thanks for your submission someone from our team will reach out to you shortly!</h1>
 <!-- footer -->
 <footer class="light-blue accent-3 page-footer">
