--- a/services.html
+++ b/services.html
@@ -39,7 +39,7 @@
   <li><a href="directions.html">Directions</a></li>
 </ul>
     <h1>services</h1>
-<h3>Psychopharmacological Management</h3>
+<h3>Psycho - pharmacological Management</h3>
 <p>Medications designed to treat mental disorders aren’t as straightforward as pills for your blood pressure or high cholesterol. It often takes a trial-and-error approach to find the right combination of medication and talk therapy to relieve your ongoing symptoms. Your doctor at Szuster Psychiatry is an expert at medication management, from prescribing the original dosage to monitoring your reactions and making necessary adjustments. Specializing in teleconferencing for psychiatric disorders, your psychotherapist provides psychiatric medical care and the most modern, effective medication management to patients in Jackson Heights, New York and Greater New York City Area. Call today for an appointment.</p>
 
 <h5>What is Medication Management?</h5>
