--- a/directions.html
+++ b/directions.html
@@ -42,12 +42,12 @@
     <h1>Directions</h1>
     <h5>We have been serving the Jackson Heights and greater New York City area since 2003</h5>
     <!-- map -->
-    <center>
+
     <div id="map">
-    <div class="mapouter"><div class="gmap_canvas"><iframe width="600" height="500" id="gmap_canvas" src="https://maps.google.com/maps?q=82-11%2037th%20Ave,%20Flushing,%20NY%2011372&t=&z=11&ie=UTF8&iwloc=&output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe><a href="https://www.embedgooglemap.net/blog/divi-discount-code-elegant-themes-coupon/">divi discount</a><br>
+    <div class="mapouter"><div class="gmap_canvas"><iframe max-width="100%" height="500" id="gmap_canvas" src="https://maps.google.com/maps?q=82-11%2037th%20Ave,%20Flushing,%20NY%2011372&t=&z=11&ie=UTF8&iwloc=&output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe><a href="https://www.embedgooglemap.net/blog/divi-discount-code-elegant-themes-coupon/">divi discount</a><br>
       <a href="https://www.embedgooglemap.net">embedgooglemap.net</a></div></div>
   </div>
-</center>
+
 <div>
   <h4>(718) 396-6766</h4>
   <h4>82-11 37th Avenue</h4>
