--- a/about.html
+++ b/about.html
@@ -39,72 +39,49 @@
         <li><a href="directions.html">Directions</a></li>
       </ul>
 <h1>About Us</h1>
-<h2>Meet Our Team</h2>
+<h3>Szuster Psychiatry Team</h3>
 <main>
-  <!-- staff -->
-  <div class="row">
-<div class="card col s6" id="person">
-  <div class="card-image waves-effect waves-block waves-light">
-    <img class="activator" src="https://photos.psychologytoday.com/4643913f-46cd-11ea-a6ad-06142c356176/2/320x400.jpeg"
-    alt="code" 
-    style="width: 50%;height:30;"
-    >
-  </div>
-  <div class="card-content">
-    <span class="card-title activator grey-text text-darken-4">Doctor Szuster<i class="material-icons right">View More</i></span>
-    <p>
-      <a 
-      href="https://www.psychologytoday.com/us/psychiatrists/dr-szuster-psychiatry-jackson-heights-ny/379656"
-      target="_blank"
-      >Link</a></p>
-  </div>
-  <div class="card-reveal">
-    <span class="card-title grey-text text-darken-4">About<i class="material-icons right">close</i></span>
-    <p>About Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum doloremque hic suscipit amet repellendus quia, maiores tenetur, eaque quis iste architecto? Reiciendis, doloremque! Vel itaque assumenda sapiente autem mollitia tempore.</p>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Non minus nihil accusamus laudantium ab! Facilis placeat ex tempore mollitia cumque sunt, repellendus voluptatem dolores eos exercitationem, pariatur officia adipisci rem.</p>
-    <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum consectetur similique mollitia temporibus vel distinctio eveniet esse voluptatibus, quas, illo necessitatibus voluptates nesciunt aliquam ratione tempora praesentium laudantium? Debitis, ullam.</p>
-  </div>
-</div>
-<div class="card col s6" id="person">
-  <div class="card-image waves-effect waves-block waves-light">
-    <img class="activator" src="https://d3wnzga3fpd9a.cloudfront.net/e3ec1d49-c633-4867-b295-4b278077238czoom.jpg"
-    alt="code" 
-    style="width: 94%;height:90;"
-    >
-  </div>
-  <div class="card-content">
-    <span class="card-title activator grey-text text-darken-4">Stephanie<i class="material-icons right">View More</i></span>
-    <p><a href="#">Link</a></p>
-  </div>
-  <div class="card-reveal">
-    <span class="card-title grey-text text-darken-4">About<i class="material-icons right">close</i></span>
-    <p>Here is some more information about this product that is only revealed once clicked on.</p>
+<div class="row">
+  <div class="col s12 m6">
+    <div class="card">
+      <div class="card-image">
+        <img src="https://photos.psychologytoday.com/4643913f-46cd-11ea-a6ad-06142c356176/2/320x400.jpeg"
+        alt="code" 
+        width="450"
+        target="_blank">
+        <span class="card-title">Dr. David Szuster</span>
+      </div>
+      <div class="card-content">
+        <p>We have been serving the Jackson Heights and greater New York City area since 2003. Our team is comprised of dedicated psychiatrists, psychiatric nurse practitioners and clinical social workers. We provide psychiatry and psychotherapy for individuals, families and couples. We offer services in Spanish and English and accept most insurance plans..</p><br>
+        <p>We specialize in diagnosing and treating a wide range of psychiatric disorders. Dr. Szuster is an expert in child & adolescent psychiatry and Dr. Millet specializes in working with geriatric populations. Our therapists have training in many modalities including CBT, DBT, Family Systems, and Psychoanalysis.</p><br>
+        <p>All three of our prescribing clinicians provide psychiatric services in English and Spanish and have years of experience in their respective specialties. We also offer a variety of group therapy options which include anxiety management, mindfulness/meditation, and immigration experience groups run in Spanish. Please visit our website for further information: www.drszuster.com</p>
+      </div>
+      <div class="card-action">
+        <a href="https://www.psychologytoday.com/us/psychiatrists/dr-szuster-psychiatry-jackson-heights-ny/379656"   alt="code" 
+        width="450"
+        target="_blank">
+        This is a link</a>
+      </div>
+    </div>
   </div>
 </div>
-
-
-<div class="card col s6" id="person">
-  <div class="card-image waves-effect waves-block waves-light">
-    <img class="activator" src="https://d3wnzga3fpd9a.cloudfront.net/e3ec1d49-c633-4867-b295-4b278077238czoom.jpg"
-    alt="code" 
-    style="width: 94%;height:90;"
-    >
-  </div>
-  <div class="card-content">
-    <span class="card-title activator grey-text text-darken-4">Sofia<i class="material-icons right">View More</i></span>
-    <p><a href="#">Link</a></p>
-  </div>
-  <div class="card-reveal">
-    <span class="card-title grey-text text-darken-4">About<i class="material-icons right">close</i></span>
-    <p>Here is some more information about this product that is only revealed once clicked on.</p>
+<div class="row">
+  <div class="col s12 m6">
+    <div class="card">
+      <div class="card-image">
+        <img src="https://images.unsplash.com/photo-1620302044885-63a750e08a71?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8Mnx8dGhlcmFwaXN0fGVufDB8fDB8fA%3D%3D&auto=format&fit=crop&w=1400&q=60">
+        <span class="card-title">Stephanie</span>
+      </div>
+      <div class="card-content">
+        <p>I am a very simple card. I am good at containing small bits of information.
+        I am convenient because I require little markup to use effectively.</p>
+      </div>
+      <div class="card-action">
+        <a href="#">This is a link</a>
+      </div>
+    </div>
   </div>
 </div>
-
-
-
-</div>
-
-
 </main>
 
 <!-- footer -->
