--- a/services.html
+++ b/services.html
@@ -62,7 +62,7 @@
         <div class="card">
           <div class="card-image">
             <img src="https://images.unsplash.com/photo-1620302044935-444961a5d028?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1470&q=80">
-            <span class="black-text card-title">What is Medication Management?</span>
+            <span class="green-text card-title">What is Medication Management?</span>
           </div>
           <div class="card-content">
             <p>Medication alone, or in tandem with talk therapy, plays a vital role in treating many mental health disorders. Finding the right medication to effectively manage the symptoms of disorders such as ADHD/ADD, depression and anxiety requires the expertise of a highly trained psychiatrist.</p>
