--- a/about.html
+++ b/about.html
@@ -45,9 +45,8 @@
   <div class="col s12 m6">
     <div class="card">
       <div class="card-image">
-        <img src="https://photos.psychologytoday.com/4643913f-46cd-11ea-a6ad-06142c356176/2/320x400.jpeg"
+        <img id="szuster"src="https://photos.psychologytoday.com/4643913f-46cd-11ea-a6ad-06142c356176/2/320x400.jpeg"
         alt="code" 
-        width="450"
         target="_blank">
         <span class="card-title">Dr. David Szuster</span>
       </div>
@@ -58,7 +57,6 @@
       </div>
       <div class="card-action">
         <a href="https://www.psychologytoday.com/us/psychiatrists/dr-szuster-psychiatry-jackson-heights-ny/379656"   alt="code" 
-        width="450"
         target="_blank">
         This is a link</a>
       </div>
