--- a/about.html
+++ b/about.html
@@ -42,6 +42,7 @@
 <main>
   <h1>About Us</h1>
 <h3>Szuster Psychiatry Team</h3>
+<h5>We have been serving the Jackson Heights and greater New York City area since 2003. Our team is comprised of dedicated psychiatrists, psychiatric nurse practitioners and clinical social workers. We provide psychiatry and psychotherapy for individuals, families and couples.</h5>
 <div class="row">
   <div class="col s12 m6">
     <div class="card">
@@ -51,15 +52,14 @@
         target="_blank">
         <span class="card-title">Dr. David Szuster</span>
       </div>
-      <div class="card-content">
-        <p>We have been serving the Jackson Heights and greater New York City area since 2003. Our team is comprised of dedicated psychiatrists, psychiatric nurse practitioners and clinical social workers. We provide psychiatry and psychotherapy for individuals, families and couples. </p>
-        <p>We specialize in diagnosing and treating a wide range of psychiatric disorders. Dr. Szuster is an expert in child & adolescent psychiatry.</p><br>
-        <p>As a prescribing doctor, we provide psychiatric services in English and Spanish and have years of experience in their respective specialties. We also offer a variety of group therapy options which include anxiety management, mindfulness/meditation, and immigration experience groups run in Spanish.</p>
+      <div class="black card-content">
+        <p class="white-text">We specialize in diagnosing and treating a wide range of psychiatric disorders. Dr. Szuster is an expert in child & adolescent psychiatry.</p><br>
+        <p class="white-text">As a prescribing doctor, we provide psychiatric services in English and Spanish and have years of experience in their respective specialties. We also offer a variety of group therapy options which include anxiety management, mindfulness/meditation, and immigration experience groups run in Spanish.</p>
       </div>
       <div class="card-action">
         <a href="https://www.psychologytoday.com/us/psychiatrists/dr-szuster-psychiatry-jackson-heights-ny/379656"   alt="code" 
         target="_blank">
-        This is a link</a>
+        Link</a>
       </div>
     </div>
   </div>
@@ -71,11 +71,11 @@
         <img id="stefany"src="https://images.unsplash.com/photo-1620302044885-63a750e08a71?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8Mnx8dGhlcmFwaXN0fGVufDB8fDB8fA%3D%3D&auto=format&fit=crop&w=1400&q=60">
         <span class="card-title">Stephanie</span>
       </div>
-      <div class="card-content">
-        <p>specializes in working with geriatric populations. Our therapists have training in many modalities including CBT, DBT, Family Systems, and Psychoanalysis.</p>
+      <div class="black card-content">
+        <p class="white-text">At Szuster Psychiatry we also offer psychotherapy services. Our therapists specialize in working with geriatric populations and have extensive training in many modalities including CBT, DBT, Family Systems, and Psychoanalysis.</p>
       </div>
       <div class="card-action">
-        <a href="#">This is a link</a>
+        <a href="https://www.zocdoc.com/doctor/david-szuster-md-118274"     target="_blank">Link</a>
       </div>
     </div>
   </div>
