--- a/providers.html
+++ b/providers.html
@@ -38,7 +38,18 @@
   <li><a href="contact.html">Get in Touch</a></li>
   <li><a href="directions.html">Directions</a></li>
 </ul>
+<main>
     <h1>providers</h1>
+    <h5>Accepted Insurance plans: </h5>
+    <h8>1199SEIU</h8>
+    <8>Aetna | Aetna Coventry</8>
+    <8>Amerigroup</8>
+    <8>Beacon Health Options</8>
+    <8>BlueCross and BlueShield</8>
+    <8>Cigna</8>
+    <8></8>
+    <8></8>
+</main>
 <!-- footer -->
 <footer class="light-blue accent-3 page-footer">
   <div class="container">
