--- a/providers.html
+++ b/providers.html
@@ -42,13 +42,23 @@
     <h1>providers</h1>
     <h5>Accepted Insurance plans: </h5>
     <h8>1199SEIU</h8>
-    <8>Aetna | Aetna Coventry</8>
-    <8>Amerigroup</8>
-    <8>Beacon Health Options</8>
-    <8>BlueCross and BlueShield</8>
-    <8>Cigna</8>
-    <8></8>
-    <8></8>
+    <h8>Aetna | Aetna Coventry</h8>
+    <h8>Amerigroup</h8>
+    <h8>Beacon Health Options</h8>
+    <h8>BlueCross and BlueShield</h8>
+    <h8>Cigna</h8>
+    <h8>EmblemHealth</h8>
+    <h8>Empire BlueCross BlueShield</h8>
+    <h8>GHI</h8>
+    <h8>HIP | Health Plan of New York</h8>
+    <h8>HealthFirst</h8>
+    <h8>HealthPlus</h8>
+    <h8>Medicaid</h8>
+    <h8>Medicare</h8>
+    <h8>PsychCare</h8>
+    <h8>WellCare</h8>
+
+    
 </main>
 <!-- footer -->
 <footer class="light-blue accent-3 page-footer">
