--- a/providers.html
+++ b/providers.html
@@ -56,8 +56,8 @@
     <h8>Medicaid</h8>
     <h8>Medicare</h8>
     <h8>PsychCare</h8>
+    <h8>PsychCare</h8>
     <h8>WellCare</h8>
-
     
 </main>
 <!-- footer -->
