--- a/providers.html
+++ b/providers.html
@@ -41,23 +41,23 @@
 <main>
     <h1>providers</h1>
     <h5>Accepted Insurance plans: </h5>
-    <h8>1199SEIU</h8>
-    <h8>Aetna | Aetna Coventry</h8>
-    <h8>Amerigroup</h8>
-    <h8>Beacon Health Options</h8>
-    <h8>BlueCross and BlueShield</h8>
-    <h8>Cigna</h8>
-    <h8>EmblemHealth</h8>
-    <h8>Empire BlueCross BlueShield</h8>
-    <h8>GHI</h8>
-    <h8>HIP | Health Plan of New York</h8>
-    <h8>HealthFirst</h8>
-    <h8>HealthPlus</h8>
-    <h8>Medicaid</h8>
-    <h8>Medicare</h8>
-    <h8>PsychCare</h8>
-    <h8>PsychCare</h8>
-    <h8>WellCare</h8>
+    <h8>1199SEIU</h8> <br>
+    <h8>Aetna | Aetna Coventry</h8><br>
+    <h8>Amerigroup</h8><br>
+    <h8>Beacon Health Options</h8><br>
+    <h8>BlueCross and BlueShield</h8><br>
+    <h8>Cigna</h8><br>
+    <h8>EmblemHealth</h8><br>
+    <h8>Empire BlueCross BlueShield</h8><br>
+    <h8>GHI</h8><br>
+    <h8>HIP | Health Plan of New York</h8><br>
+    <h8>HealthFirst</h8><br>
+    <h8>HealthPlus</h8><br>
+    <h8>Medicaid</h8><br>
+    <h8>Medicare</h8><br>
+    <h8>PsychCare</h8><br>
+    <h8>PsychCare</h8><br>
+    <h8>WellCare</h8><br>
     
 </main>
 <!-- footer -->
