--- a/providers.html
+++ b/providers.html
@@ -39,6 +39,7 @@
   <li><a href="directions.html">Directions</a></li>
 </ul>
 <main>
+  <center>
     <h1>providers</h1>
     <h5>Accepted Insurance plans: </h5>
     <h8>1199SEIU</h8> <br>
@@ -58,7 +59,7 @@
     <h8>PsychCare</h8><br>
     <h8>PsychCare</h8><br>
     <h8>WellCare</h8><br>
-    
+  </center> 
 </main>
 <!-- footer -->
 <footer class="light-blue accent-3 page-footer">
